# mini-openran-lab

./: .gitignore  LICENSE  Makefile  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_SUMMARY.md  SECURITY_IMPLEMENTATION.md  pyproject.toml
.github/workflows/: ci.yml
charts/openran/: Chart.yaml  values-kind.yaml  values.yaml
charts/openran/templates/: _helpers.tpl  gnb.yaml  image-security.yaml  namespace.yaml  networkpolicy.yaml  resourcequota.yaml  serviceaccount.yaml  ue.yaml
grafana-dashboards/: QUICK-SETUP.md  SETUP-GUIDE.md  network-performance.json  openran-overview.json
hack/: debug-environment.sh  debug-kubelet.sh  install-prerequisites.sh  kind-config.yaml  kind-up.sh  load-images.sh  stop-instance.sh
mock-gnb/: Dockerfile  gnb_simulator.py  start.sh
mock-ue/: Dockerfile  start.sh  ue_simulator.py
terraform/: main.tf
tests/: test_beam_tuner.py  test_kind_cluster.py  test_rrc_connection.py
tests/robot/: e2e.robot
xapps/beam_tuner/: Dockerfile  __init__.py  app.py  e2_client.py  logic.py  metrics.py  requirements.txt
